2007-02-25  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/mist/src/mist-rc-style.c: (mist_rc_style_parse):
	* engines/thinice/src/thinice_rc_style.c: (thinice_rc_style_parse):
	- Use quarks with the engines name in them.
	- Don't free thinice's RC style on parse failure. GTK+ will
	take care of that. (Thanks to Werner Pantke for reporting)

2007-02-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_drawing.c: (redmond_draw_box):
	- Do not use the real active state of the widget. Instead use the passed
	  in state type. This fixes inconsistent toggle buttons.

2007-02-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/redmond/src/redmond_gtk2_misc.c:
	(do_redmond_draw_masked_fill):
	- cairo_mask ignores the current path, so we need to clip the
	rectangle or everything gets filled.

2007-02-20  Benjamin Berg  <benjamin@sipsolutions.net>

	* engines/glide/src/glide_gtk2_drawing.c: (glide_draw_check),
	(glide_draw_option):
	* engines/hc/src/hc-style.c: (hc_draw_check), (hc_draw_option):
	* engines/mist/src/mist-style.c: (mist_style_draw_option):
	* engines/redmond/src/redmond_gtk2_drawing.c: (redmond_draw_check),
	(redmond_draw_option):
	* engines/smooth/src/engine/smooth_gtk2_drawing.c:
	(smooth_draw_option), (smooth_draw_check):
	* engines/support/widget-information.c:
	* engines/support/widget-information.h:

	Remove ge_toggle_get_inconsistent and
	ge_cell_renderer_toggle_get_inconsistent, instead rely on the passed
	in shadow type.

2007-02-19  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	* test/valgrind-suppressions:
	- Change valgrind options
	- Set some enviroment variables for glib to make it more valgrind
	friendly
	- some modifications to the suppressions file

2007-02-18  Benjamin Berg  <benjamin@sipsolutions.net>

	* test/Makefile.am:
	* test/gtkrcs/clearlooks-inverted:
	- Add clearlooks inverted style to the tests.

2007-02-17  Benjamin Berg  <benjamin@sipsolutions.net>
